Make the page content center aligned to help big screens, add screenshots to update 3, yeah we basically just need a picture for the kindle dailynote and we're done

--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -3,16 +3,15 @@
     {% include head.html %}
 
         <body>
-        <!-- man its been over a week working on this site redesign. i am so tired but it was worth it -realjame -->
+        <!-- man its been over a week working on this site redesign. i am so tired but it was worth it -jame -->
         <!-- hi if youre reading this -->
         <!-- there are more comments on various pages have fun -->
         <!-- but like its inside the main/article wrappers and stuff -->
         <!-- https://realja.me/bloxycola.jpg -->
 
         {% include header.html %}
-
-            <main class="page-content" aria-label="Content"> {{ content }}
-        </main>
+            <div class="page-content"> <main class="content-wrapper" aria-label="Content">{{ content }}</main>
+        </div>
 
         {% include footer.html %}
     </body>
