--- a/src/_sass/realjame/_base.scss
+++ b/src/_sass/realjame/_base.scss
@@ -49,8 +49,8 @@ h2,
 .header-band {
 	background: linear-gradient(to right, $accent-color 50%, #7ac2ffff 70%, #006ecb00 100%);
 	line-height: 1em;
-	margin-left: -20vw;
-	padding-left: 20vw;
+	margin-left: -1em;
+	padding-left: 1em;
 	padding-top: 5px;
 	padding-bottom: 5px;
 
@@ -106,6 +106,8 @@ figure > img {
 
 figcaption {
 	font-size: $small-font-size;
+	text-align: center;
+	font-style: italic;
 }
 
 /**
