--- a/src/_sass/realjame/_layout.scss
+++ b/src/_sass/realjame/_layout.scss
@@ -217,7 +217,10 @@ body .button-row {
 	@include media-query($small-screen) {
 		width: auto;
 	}
+}
 
+.content-wrapper {
+	margin: auto;
 	max-width: 50em;
 }
 
@@ -368,6 +371,17 @@ body .button-row {
  */
 .post {
 	max-width: inherit;
+
+	figure {
+		margin-block-start: 0.75em;
+		margin-block-end: 0.75em;
+		margin: auto;
+	}
+
+	p img,
+	figure img {
+		max-width: 100%;
+	}
 }
 
 .post-title {
@@ -377,6 +391,10 @@ body .button-row {
 	text-align: center;
 	font-weight: bold;
 	margin-top: -20px;
+	margin-left: -50vw;
+	padding-left: 50vw;
+
+	background: linear-gradient(to right, #b3d4f0 50%, #7ac2ff 80%, rgba(0, 110, 203, 0) 100%);
 }
 
 .post-content {
@@ -558,8 +576,11 @@ body .button-row {
  * Tag filter page
  */
 .tag-description {
+	h1,
 	h2 {
-		margin-bottom: 0;
+		margin-top: -20px;
+		margin-bottom: 0.1em;
+		font-size: 1.8em;
 	}
 
 	p {
