--- a/src/_includes/callout.html
+++ b/src/_includes/callout.html
@@ -8,6 +8,7 @@
                 src="{{ icon_path }}"
                 width="32"
                 height="32"
+                alt=""
                 class="icon callout-icon">
             <div class="callout-title-inner">{{ type | capitalize }}</div>
         </div>
