--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,15 +1,24 @@
 {% include buttonrow.html %}
 <footer class="site-footer">
-    <a class="footer-item pretty-button" href="mailto:{{ site.email }}"><img class="icon" src="/assets/silk/email.png"> {{ site.email }}</a>
+    <a class="footer-item pretty-button" href="mailto:{{ site.email }}"><img
+            alt=""
+            class="icon"
+            src="/assets/silk/email.png"> {{ site.email }}</a>
     <a
         class="footer-item pretty-button"
         rel="me"
         href="https://wetdry.world/@jame">
-        <img class="icon" src="/assets/icons/mastodon.svg">
+        <img
+            alt=""
+            class="icon"
+            src="/assets/icons/mastodon.svg">
         @jame@wetdry.world
     </a>
     <a class="footer-item pretty-button" href="https://twitter.com/real__jame">
-        <img class="icon" src="/assets/icons/twitter.svg">
+        <img
+            alt=""
+            class="icon"
+            src="/assets/icons/twitter.svg">
         @real__jame
     </a>
 </footer>
