--- a/src/_includes/rss.html
+++ b/src/_includes/rss.html
@@ -3,20 +3,24 @@
             src="/assets/silk/feed.png"
             height="16"
             width="16"
+            alt=""
             class="icon">RSS feed for everything</a>
     <a href="/blog/feed.xml" class="pretty-button"><img
             src="/assets/feedicons-color/01.png"
             height="16"
             width="16"
+            alt=""
             class="icon">Only blog posts</a>
     <a href="/dailynote/feed.xml" class="pretty-button"><img
             src="/assets/feedicons-color/16.png"
             height="16"
             width="16"
+            alt=""
             class="icon">Only daily notes</a>
     <a href="/devlog/feed.xml" class="pretty-button"><img
             src="/assets/feedicons-color/25.png"
             height="16"
             width="16"
+            alt=""
             class="icon">Only devlogs</a>
 </div>
