--- a/src/_includes/tagcloud.html
+++ b/src/_includes/tagcloud.html
@@ -32,6 +32,7 @@
                         src="{{icon}}"
                         height="16"
                         width="16"
+                        alt=""
                         class="icon">
                     {{ tag | capitalize }} ·
                     <b>{{ tag_count }}</b>
