--- a/src/_includes/buttonrow.html
+++ b/src/_includes/buttonrow.html
@@ -1,15 +1,67 @@
 <div class="button-row">
-    <a href="https://nick64.me"><img src="/assets/buttons/nick64.gif" alt="nick64.me"></a>
-    <a href="http://razorback95.com"><img src="/assets/buttons/razorback95.gif" alt="Razorback"></a>
-    <a href="https://landchad.net"><img src="/assets/buttons/landchad.gif" alt="Get a website - LandChad.net"></a>
-    <a href="https://yesterweb.org/no-to-web3/"><img src="/assets/buttons/saynotoweb3.gif" alt="Say no to Web3 - Keep the web free"></a>
-    <a href="https://sizeof.cat"><img src="/assets/buttons/sizeofcat.jpg" alt="sizeof(cat)"></a>
-    <a href="https://wiby.me"><img src="/assets/buttons/wiby.gif" alt="wiby.me - Search"></a>
-    <a href="https://neocities.org"><img src="/assets/buttons/neocities.gif" alt="NeoCities.org - The web is yours"></a>
-    <a href="https://realja.me"><img src="/realjame.gif" alt="realja.me"></a>
-    <a href="https://dreampipe.net/"><img src="/assets/buttons/dreamcast.gif" alt="Dreamcast"></a>
-    <a href="https://maia.crimew.gay"><img src="/assets/buttons/maiacrimewgay.png" alt="maia.crimew.gay"></a>
-    <a href="https://ashiecorner.xyz"><img src="/assets/buttons/ashiecorner.gif" alt="ashiecorner"></a>
-    <a href="https://zencorner.xyz"><img src="/assets/buttons/zencorner.gif" alt="zencorner"></a>
-    <a href="https://cadence.moe"><img src="/assets/buttons/cadence.png" alt="Cadence Now!"></a>
+    <a href="https://nick64.me"><img
+            src="/assets/buttons/nick64.gif"
+            width="88"
+            height="31"
+            alt="nick64.me"></a>
+    <a href="http://razorback95.com"><img
+            src="/assets/buttons/razorback95.gif"
+            width="88"
+            height="31"
+            alt="Razorback"></a>
+    <a href="https://landchad.net"><img
+            src="/assets/buttons/landchad.gif"
+            width="88"
+            height="31"
+            alt="Get a website - LandChad.net"></a>
+    <a href="https://yesterweb.org/no-to-web3/"><img
+            src="/assets/buttons/saynotoweb3.gif"
+            width="88"
+            height="31"
+            alt="Say no to Web3 - Keep the web free"></a>
+    <a href="https://sizeof.cat"><img
+            src="/assets/buttons/sizeofcat.jpg"
+            width="88"
+            height="31"
+            alt="sizeof(cat)"></a>
+    <a href="https://wiby.me"><img
+            src="/assets/buttons/wiby.gif"
+            width="88"
+            height="31"
+            alt="wiby.me - Search"></a>
+    <a href="https://neocities.org"><img
+            src="/assets/buttons/neocities.gif"
+            width="88"
+            height="31"
+            alt="NeoCities.org - The web is yours"></a>
+    <a href="https://realja.me"><img
+            src="/realjame.gif"
+            width="88"
+            height="31"
+            alt="realja.me"></a>
+    <a href="https://dreampipe.net/"><img
+            src="/assets/buttons/dreamcast.gif"
+            width="88"
+            height="31"
+            alt="Dreamcast"></a>
+    <a href="https://maia.crimew.gay"><img
+            src="/assets/buttons/maiacrimewgay.png"
+            width="88"
+            height="31"
+            alt="maia.crimew.gay"></a>
+    <a href="https://ashiecorner.xyz"><img
+            src="/assets/buttons/ashiecorner.gif"
+            width="88"
+            height="31"
+            alt="ashiecorner"></a>
+    <a href="https://zencorner.xyz"><img
+            src="/assets/buttons/zencorner.gif"
+            width="88"
+            height="31"
+            alt="zencorner"></a>
+    <a href="https://cadence.moe"><img
+            src="/assets/buttons/cadence.png"
+            width="88"
+            height="31"
+            alt="Cadence Now!"></a>
 </div>
