--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -6,12 +6,12 @@ Check out these "NEW" gif icons:
 src="/assets/silk/new.png"
 height="16"
 width="16"
-class="icon">
+alt="" class="icon">
 <img
 src="/assets/icons/new.gif"
 height="18"
 width="35"
-class="icon"
+alt="" class="icon"
 style="width: auto; height: auto;">
 {% endcomment %}
 
@@ -25,6 +25,7 @@ style="width: auto; height: auto;">
                     src="/assets/silk/house.png"
                     height="16"
                     width="16"
+                    alt=""
                     class="icon">
                 Home
             </a>
@@ -32,30 +33,35 @@ style="width: auto; height: auto;">
                     src="/assets/feedicons-color/01.png"
                     height="16"
                     width="16"
+                    alt=""
                     class="icon">Blog
             </a>
             <a class="header-item" href="/dailynote"><img
                     src="/assets/feedicons-color/16.png"
                     height="16"
                     width="16"
+                    alt=""
                     class="icon">Daily Notes
             </a>
             <a class="header-item" href="/devlog"><img
                     src="/assets/feedicons-color/25.png"
                     height="16"
                     width="16"
+                    alt=""
                     class="icon">Devlogs
             </a>
             <a class="header-item" href="/projects"><img
                     src="/assets/silk/bricks.png"
                     height="16"
                     width="16"
+                    alt=""
                     class="icon">Projects
             </a>
             <a class="header-item" href="/contact"><img
                     src="/assets/silk/vcard.png"
                     height="16"
                     width="16"
+                    alt=""
                     class="icon">About + Contact
             </a>
 
@@ -63,18 +69,21 @@ style="width: auto; height: auto;">
                     src="/assets/silk/page_white_go.png"
                     height="16"
                     width="16"
+                    alt=""
                     class="icon">External Links</div>
 
             <a class="header-item" href="https://wiki.realja.me"><img
                     src="/assets/icons/rbxlegacydocs.ico"
                     height="16"
                     width="16"
+                    alt=""
                     class="icon">RBX Legacy Docs
             </a>
             <a class="header-item" href="https://textarea.site"><img
                     src="/assets/icons/textarea.ico"
                     height="16"
                     width="16"
+                    alt=""
                     class="icon">textarea.site
             </a>
         </nav>
