--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -3,10 +3,11 @@
     {% include head.html %}
 
         <body>
-        <!-- man its been over a week working on this site redesign. i am so tired but it was worth it -jame -->
+        <!-- man its been 2 weeks working on this site redesign. i am so tired but it was worth it -jame -->
         <!-- hi if youre reading this -->
         <!-- there are more comments on various pages have fun -->
         <!-- but like its inside the main/article wrappers and stuff -->
+        <!-- there's also not that many actually -->
         <!-- https://realja.me/bloxycola.jpg -->
 
         {% include header.html %}
