--- a/src/_includes/post-list-simple.html
+++ b/src/_includes/post-list-simple.html
@@ -1,18 +1,23 @@
 {% assign count = 0 %}
 {% assign limit = include.limit | default: 999 %}
 {% for post in site.categories[include.category] %}
-    {% if count < limit %}
-        <h3>
-            <span class="topics">
-                {% for tag in post.tags %}
-                    <a href="/_tags/{{include.category}}/{{ tag }}" class="topic-item pretty-button">{{ tag }}</a>
-                {% endfor %}
-            </span>
-            <a href="{{ post.url }}">{{ post.title }}</a>
-        </h3>
-        {{ post.excerpt }}
-        {% assign count = count | plus: 1 %}
+{% if count < limit %} <h3>
+    {% comment %}
+    TODO: the topics span should be its own component, it exists in both post-list and post-list-simple!
+    {% endcomment %}
+    <span class="topics">
+        {% for tag in post.tags %}
+        {% assign icon = site.tagicons[tag] %}
+        <a href="/_tags/{{include.category}}/{{ tag }}" class="topic-item pretty-button">{% if icon %}
+            <img src="{{icon}}" height="16" width="16" alt="" class="icon">
+            {% endif %}{{ tag }}</a>
+        {% endfor %}
+    </span>
+    <a href="{{ post.url }}">{{ post.title }}</a>
+    </h3>
+    {{ post.excerpt }}
+    {% assign count = count | plus: 1 %}
     {% else %}
-        {% break %}
+    {% break %}
     {% endif %}
-{% endfor %}
+    {% endfor %}
