--- a/_includes/post-list-simple.html
+++ b/_includes/post-list-simple.html
@@ -1,23 +1,32 @@
 {% assign count = 0 %}
 {% assign limit = include.limit | default: 999 %}
 {% for post in site.categories[include.category] %}
-{% if count < limit %} <h3>
-    {% comment %}
-    TODO: the topics span should be its own component, it exists in both post-list and post-list-simple!
-    {% endcomment %}
-    <span class="topics">
+  {% if count < limit %}
+    <h3>
+      <span class="topics">
         {% for tag in post.tags %}
-        {% assign icon = site.tagicons[tag] %}
-        <a href="/_tags/{{include.category}}/{{ tag }}" class="topic-item pretty-button">{% if icon %}
-            <img src="{{icon}}" height="16" width="16" alt="" class="icon">
-            {% endif %}{{ tag }}</a>
+          {% assign icon = site.tagicons[tag] %}
+          <a href="/_tags/{{include.category}}/{{ tag }}" class="topic-item pretty-button">
+            {% if icon %}
+              <img
+                src="{{icon}}"
+                height="16"
+                width="16"
+                alt=""
+                class="icon">
+            {% endif %}
+            {{ tag }}</a>
         {% endfor %}
-    </span>
-    <a href="{{ post.url }}">{{ post.title }}</a>
+      </span>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+      {% assign date_format = site.minima.date_format | default: '%b %-d, %Y' %}
+      <span class="post-meta">
+        {{ post.date | date: date_format }}
+      </span>
     </h3>
     {{ post.excerpt }}
     {% assign count = count | plus: 1 %}
-    {% else %}
+  {% else %}
     {% break %}
-    {% endif %}
-    {% endfor %}
+  {% endif %}
+{% endfor %}
