Media for space coast post

--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,12 +1,18 @@
 <figure class="image">
-    <img
-        src="{{ include.url }}"
-        width="{{ include.width | default: 512 }}"
-        {% if include.height and include.height != "" %}
-        height="{{ include.height }}"
-        {% endif %}
-        alt="{{ include.alt | default: include.caption | default: "" }}">
-    {% if include.caption %}
-        <figcaption>{{ include.caption }}</figcaption>
+  {% if include.largeurl %}
+    <a href="{{ include.largeurl }}">
+  {% endif %}
+  <img
+    src="{{ include.url }}"
+    width="{{ include.x | default: 512 }}"
+    {% if include.y and include.y != "" %}
+    height="{{ include.y }}"
     {% endif %}
+    alt="{{ include.alt | default: include.caption | default: "" }}">
+  {% if include.largeurl %}
+    </a>
+  {% endif %}
+  {% if include.caption %}
+    <figcaption>{{ include.caption }}</figcaption>
+  {% endif %}
 </figure>
