--- a/_sass/realjame/_base.scss
+++ b/_sass/realjame/_base.scss
@@ -20,6 +20,10 @@ body {
 	margin: 0;
 }
 
+h1 {
+	text-wrap: balance; // Not exactly a standard feature, but pretty nifty!
+}
+
 h1,
 h2,
 h3,
@@ -159,7 +163,7 @@ blockquote {
 	border-top-left-radius: 4px;
 	border-bottom-left-radius: 4px;
 	font-size: 1.1em;
-	letter-spacing: -1px;
+	padding-left: 1em;
 	font-style: italic;
 
 	> :last-child {
