--- a/_includes/projects/micrathena.html
+++ b/_includes/projects/micrathena.html
@@ -1,11 +1,15 @@
 <div class="card card-active">
-    <h3 class="project-title"><img src="/assets/silk/tag_purple.png" width="32" height="32" alt="" class="icon"><a
-            href="/projects/micrathena">
-            Project
+  <h3 class="project-title"><img
+      src="/assets/silk/tag_purple.png"
+      width="32"
+      height="32"
+      alt=""
+      class="icon"><a href="/projects/micrathena">
+      Project  
             Micrathena
-        </a></h3>
-    <p class="project-status">Active since September 2023</p>
-    <p class="project-description">Something entirely new, created in the late 2009 Roblox engine. Please stay tuned for
-        an alpha release soon.<br><small>There will be a modern Roblox port :)</small>
-    </p>
+    </a>
+  </h3>
+  <p class="project-status">Started September 2023, but it'll be here eventually...</p>
+  <p class="project-description">Something entirely new, created in the late 2009 Roblox engine.
+  </p>
 </div>
