working on snow

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,14 +2,15 @@
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
   {% include head.html %}
 
-    <body>
+  <body>
     <!-- Hi! -->
     <!-- I've written comments on several posts and pages of this website. -->
     <!-- Please, try opening the latest daily note and check. -->
     <!-- You'll have to dig a bit, expand div > main > "post-content" div -->
     <!-- But if you do that, you'll find some more serious reflections. -->
     <!-- https://realja.me/bloxycola.jpg -->
-
+    {% comment %} {% include snow.html %} {% endcomment %}
+    {% include snowjs.html %}
     {% include header.html %}
     <div class="page-content">
       <main class="content-wrapper" aria-label="Content">{{ content }}</main>
