--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
     <!-- You'll have to dig a bit, expand div > main > "post-content" div -->
     <!-- But if you do that, you'll find some more serious reflections. -->
     <!-- https://realja.me/bloxycola.jpg -->
-    {% comment %} {% include snow.html %} {% endcomment %}
-    {% include snowjs.html %}
+    {% comment %} {% include snowjs.html %} {% endcomment %}
+    {% include snowcss.html %}
     {% include header.html %}
     <div class="page-content">
       <main class="content-wrapper" aria-label="Content">{{ content }}</main>
