--- a/_includes/snowcss.html
+++ b/_includes/snowcss.html
@@ -190,14 +190,14 @@
   }
 </style>
 <script>
-  const savedSettings = JSON.parse(localStorage.getItem('snowSettings')) || {
-    snowEffect: true,
+  const savedSettings = JSON.parse(localStorage.getItem("snowSettings")) || {
+    snowEffect: !(window.matchMedia && window.matchMedia("(prefers-reduced-motion: reduce)").matches),
   };
 
   let snow = savedSettings.snowEffect;
   function updateSnowing() {
     document.getElementById("snowflakes").style.display = snow ? "block" : "none";
-    document.getElementById('snow-icon').src = snow ? '/assets/silk/weather_snow.png' : '/assets/silk/weather_sun.png';
+    document.getElementById("snow-icon").src = snow ? "/assets/silk/weather_snow.png" : "/assets/silk/weather_sun.png";
     saveSettings();
   }
   if (!snow) {
@@ -213,6 +213,6 @@
     const settings = {
         snowEffect: snow,
     };
-    localStorage.setItem('snowSettings', JSON.stringify(settings));
+    localStorage.setItem("snowSettings", JSON.stringify(settings));
   }
 </script>
