--- a/_sass/realjame/_syntax-highlighting.scss
+++ b/_sass/realjame/_syntax-highlighting.scss
@@ -92,11 +92,11 @@
 		font-weight: bold;
 	} // Keyword.Reserved
 	.kt {
-		color: #458;
+		color: #799bff;
 		font-weight: bold;
 	} // Keyword.Type
 	.m {
-		color: #099;
+		color: #1cdbdb;
 	} // Literal.Number
 	.s {
 		color: #e1abb8;
@@ -105,10 +105,10 @@
 		color: #13debb;
 	} // Name.Attribute
 	.nb {
-		color: #0086b3;
+		color: #79bdf6;
 	} // Name.Builtin
 	.nc {
-		color: #458;
+		color: #799bff;
 		font-weight: bold;
 	} // Name.Class
 	.no {
@@ -122,7 +122,7 @@
 		font-weight: bold;
 	} // Name.Exception
 	.nf {
-		color: #900;
+		color: #f9a1a1;
 		font-weight: bold;
 	} // Name.Function
 	.nn {
@@ -153,34 +153,34 @@
 		color: #099;
 	} // Literal.Number.Oct
 	.sb {
-		color: #d14;
+		color: #ffb3ee;
 	} // Literal.String.Backtick
 	.sc {
-		color: #d14;
+		color: #ffb3ee;
 	} // Literal.String.Char
 	.sd {
-		color: #d14;
+		color: #ffb3ee;
 	} // Literal.String.Doc
 	.s2 {
-		color: #d14;
+		color: #ffb3ee;
 	} // Literal.String.Double
 	.se {
-		color: #d14;
+		color: #ffb3ee;
 	} // Literal.String.Escape
 	.sh {
-		color: #d14;
+		color: #ffb3ee;
 	} // Literal.String.Heredoc
 	.si {
-		color: #d14;
+		color: #ffb3ee;
 	} // Literal.String.Interpol
 	.sx {
-		color: #d14;
+		color: #ffb3ee;
 	} // Literal.String.Other
 	.sr {
 		color: #009926;
 	} // Literal.String.Regex
 	.s1 {
-		color: #d14;
+		color: #ffb3ee;
 	} // Literal.String.Single
 	.ss {
 		color: #990073;
