--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   <body>
     <!-- Hi! -->
     <!-- I've written comments on several posts and pages of this website. -->
-    <!-- Please, try opening the latest daily note and check. -->
+    <!-- You can try opening the latest post and check. -->
     <!-- You'll have to dig a bit, expand div > main > "post-content" div -->
     <!-- But if you do that, you'll find some more serious reflections. -->
     <!-- https://realja.me/bloxycola.jpg -->
