--- a/_sass/realjame/_layout.scss
+++ b/_sass/realjame/_layout.scss
@@ -178,10 +178,6 @@ body .button-row {
 /**
  * Page content
  */
-.post-header .post-meta {
-	margin-top: -2em;
-}
-
 .page-content {
 	margin-left: 200px;
 	width: auto;
@@ -278,8 +274,9 @@ body .button-row {
 .post-meta {
 	font-size: $small-font-size;
 	color: $gray-color;
-	text-align: center;
+	// text-align: center;
 	margin: 0;
+	margin-top: -0.75em;
 }
 
 .post-description {
