--- a/_includes/post-list-simple.html
+++ b/_includes/post-list-simple.html
@@ -1,3 +1,5 @@
+{% comment %} TODO: make this super simple for use in tag filter pages? or maybe not {% endcomment %}
+
 {% assign count = 0 %}
 {% assign limit = include.limit | default: 9 %}
 
@@ -27,7 +29,7 @@
       </span>
       <a href="{{ post.url }}">{{ post.title }}</a>
       {% assign date_format = site.minima.date_format | default: '%b %-d, %Y' %}
-      <span class="post-meta">
+      <span class="post-meta-simple">
         {{ post.date | date: date_format }}
       </span>
     </h3>
