more style tweaks

--- a/_includes/snowcss.html
+++ b/_includes/snowcss.html
@@ -3,7 +3,7 @@
 <style>
   /* customizable snowflake styling */
   .snowflake {
-    color: rgba(1, 1, 1, 0.9);
+    color: rgb(255, 255, 255);
     font-size: 0.3em;
     font-family: Arial
     , sans-serif;
@@ -11,7 +11,7 @@
   }
 
   .snowflake:nth-child(odd) {
-    color: rgba(1, 1, 1, 0.8);
+    color: rgba(255, 255, 255, 0.95);
     font-size: 0.5em;
   }
 
