--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -1,118 +1,110 @@
 ---
 layout: default
 ---
+{% assign selectedtag-icon = site.tagicons[page.tag] %}
 <div class="tag-description">
-    <h2>Viewing posts tagged with: {{ page.tag }}</h2>
-    {% if page.category %}
-        {% assign category_name = page.category %}
-        <p>Currently viewing under the
-            <strong>{{ site.category_display_names[category_name] | default: page.category }}</strong>
-            category.</p>
-    {% else %}
-        <p>Currently viewing posts from all categories.</p>
-    {% endif %}
+  <h1 class="post-title">
+    <span>
+      {% if selectedtag-icon %}
+        <img
+          src="{{selectedtag-icon}}"
+          height="16"
+          width="16"
+          alt=""
+          class="icon">
+      {% endif %}
+      {{ page.tag | capitalize }}</span>
+  </h1>
+  {% if page.category %}
+    {% assign category_name = page.category %}
+    <p>Currently viewing under the
+      <strong>{{ site.category_display_names[category_name] | default: page.category }}</strong>
+      category.</p>
+  {% else %}
+    <p>Currently viewing posts from all categories.</p>
+  {% endif %}
 </div>
 
 <div class="tag-filter-links">
-    <p>Filter by category:</p>
-    <ul>
-        <li><img
-                src="/assets/silk/feed.png"
-                height="16"
-                width="16"
-                alt=""
-                class="icon"><a href="/_tags/{{ page.tag }}.html">All categories</a>
-        </li>
-        <li><img
-                src="/assets/feedicons-color/01.png"
-                height="16"
-                width="16"
-                alt=""
-                class="icon"><a href="/_tags/blog/{{ page.tag }}.html">Blog posts</a>
-        </li>
-        <li><img
-                src="/assets/feedicons-color/16.png"
-                height="16"
-                width="16"
-                alt=""
-                class="icon"><a href="/_tags/dailynote/{{ page.tag }}.html">Daily notes</a>
-        </li>
-        <li><img
-                src="/assets/feedicons-color/25.png"
-                height="16"
-                width="16"
-                alt=""
-                class="icon"><a href="/_tags/devlog/{{ page.tag }}.html">Devlogs</a>
-        </li>
-    </ul>
+  <p>Filter by category:</p>
+  <ul>
+    <li><img
+        src="/assets/silk/feed.png"
+        height="16"
+        width="16"
+        alt=""
+        class="icon"><a href="/_tags/{{ page.tag }}.html">All categories</a>
+    </li>
+    <li><img
+        src="/assets/feedicons-color/01.png"
+        height="16"
+        width="16"
+        alt=""
+        class="icon"><a href="/_tags/blog/{{ page.tag }}.html">Blog posts</a>
+    </li>
+    <li><img
+        src="/assets/feedicons-color/16.png"
+        height="16"
+        width="16"
+        alt=""
+        class="icon"><a href="/_tags/dailynote/{{ page.tag }}.html">Daily notes</a>
+    </li>
+    <li><img
+        src="/assets/feedicons-color/25.png"
+        height="16"
+        width="16"
+        alt=""
+        class="icon"><a href="/_tags/devlog/{{ page.tag }}.html">Devlogs</a>
+    </li>
+  </ul>
 </div>
 
 <div class="tag-filter-tagclouds">
-    <p>View other tags:</p>
-    {% include tagcloud.html %}
-    {% include tagcloud-simple.html message = " " %}
+  <p>View other tags:</p>
+  {% include tagcloud.html %}
+  {% include tagcloud-simple.html message = " " %}
 </div>
 
 <ul class="post-list">
-    {% assign posts_to_show = site.posts %}
-    {% if page.category %}
-        {% assign posts_to_show = posts_to_show | where: "category", page.category %}
+  {% assign posts_to_show = site.posts %}
+  {% if page.category %}
+    {% assign posts_to_show = posts_to_show | where: "category", page.category %}
+  {% endif %}
+
+  {% for post in posts_to_show %}
+    {% if post.tags contains page.tag %}
+      <h2>
+        <a href="{{ post.url }}">{{ post.title }}</a>
+      </h2>
+      <div class="post-meta">
+        <span class="topics">
+          {% for tag in post.tags %}
+            {% assign icon = site.tagicons[tag] %}
+            <a href="/_tags/{{include.category}}/{{ tag }}" class="topic-item pretty-button">
+              {% if icon %}
+                <img
+                  src="{{icon}}"
+                  height="16"
+                  width="16"
+                  alt=""
+                  class="icon">
+              {% endif %}
+              {{ tag }}</a>
+          {% endfor %}
+        </span>
+        {% assign date_format = site.minima.date_format | default: '%b %-d, %Y' %}
+        {% comment %} i love inline styles 🤤🤤🤤 {% endcomment %}
+        <span style="padding-left: 0.1em;">
+          {% if posts == site.posts %}
+            {{ post.category }}
+            ·
+          {% endif %}
+          {{ post.date | date: date_format }}
+          ·
+          {{ post.content | number_of_words }} words
+        </span>
+      </div>
+      {{ post.excerpt }}
     {% endif %}
-
-    {% for post in posts_to_show %}
-        {% if post.tags contains page.tag %}
-            {% unless post.category contains "dailynote" %}
-                <li class="post-item card">
-                    {% assign date_format = site.minima.date_format | default: '%b %-d, %Y' %}
-                    <span class="post-meta">
-                        {{ post.date | date: date_format }}
-                    </span>
-
-                    <a class="post-link" href="{{ post.url | relative_url }}">
-                        <img
-                            src="{{site.categoryicons[post.category]}}"
-                            height="16"
-                            width="16"
-                            alt=""
-                            class="icon">
-                        {{ post.title | default: '-Untitled-' }}
-                    </a>
-
-                    {% if post.description %}
-                        {{ post.description }}
-                    {% endif %}
-
-                    {% if post.image %}
-                        <img
-                            src="{{ post.image }}"
-                            width="512"
-                            height="384"
-                            class="post-list-image">
-                    {% endif %}
-
-                    <span class="topics">
-                        {% for tag in post.tags %}
-                            <a href="/_tags{{page.category}}/{{ tag }}" class="topic-item pretty-button">{{ tag }}</a>
-                        {% endfor %}
-                    </span>
-                </li>
-            {% else %}
-                <li class="post-item card">
-                    <a class="post-link" href="{{ post.url }}"><img
-                            src="{{site.categoryicons[post.category]}}"
-                            height="16"
-                            width="16"
-                            alt=""
-                            class="icon">{{ post.title }}</a>
-                    {{ post.excerpt }}
-                    <span class="topics">
-                        {% for tag in post.tags %}
-                            <a href="/_tags{{include.category}}/{{ tag }}" class="topic-item pretty-button">{{ tag }}</a>
-                        {% endfor %}
-                    </span>
-                </li>
-            {% endunless %}
-
-        {% endif %}
-    {% endfor %}
+  {% endfor %}
 </ul>
