--- a/_sass/realjame/_base.scss
+++ b/_sass/realjame/_base.scss
@@ -74,6 +74,7 @@ h2,
 	padding-left: 15em;
 	padding-top: 5px;
 	padding-bottom: 5px;
+	width: 100%;
 
 	color: #13222f;
 	text-shadow: 0 0 12px #2d93ec;
