--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,9 @@
-<!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html lang="en">
   {% include head.html %}
-
   <body>
-    <!-- Hi -->
-    <!-- I've written comments on several posts and pages of this website. -->
-    <!-- You can try opening the latest post and check. -->
-    <!-- You'll have to dig a bit, expand div > main > "post-content" div -->
-    <!-- But if you do that, you'll find some more serious reflections. -->
-    <!-- https://realja.me/bloxycola.jpg -->
-    {% comment %} {% include snowjs.html %} {% endcomment %}
-    {% include header.html %}
-    <div class="page-content">
-      <main class="content-wrapper" aria-label="Content">{{ content }}</main>
-    </div>
-
+    {% include sidebar.html %}
+    <div class="main">{{ content }}</div>
     {% include footer.html %}
   </body>
 </html>
