--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,5 +1,16 @@
 ---
-# Only the main Sass file needs front matter (the dashes are enough)
 ---
 
-@import "realjame";
+.sidebar {
+    float: left;
+    width: 25%;
+}
+
+.main {
+    float: right;
+    width: 75%;
+}
+
+.footer {
+    clear: both;
+}
